<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:context=".PatientDetails"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/login"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="414dp"
            android:layout_height="232dp"
            android:layout_marginEnd="1dp"
            android:alpha="0.8"
            android:background="@drawable/testbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/ET_address"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/custome_input"
            android:drawableStart="@drawable/ic_baseline_home_24"
            android:drawablePadding="12dp"
            android:layout_marginHorizontal="15dp"
            android:ems="10"
            android:hint="@string/ET_address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_phone"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/custome_input"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/ET_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_address" />

        <EditText
            android:id="@+id/ET_email"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/custome_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/ET_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_phone" />

        <TextView
            android:id="@+id/tv_testConduct"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/tv_testConduct"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_email" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="123dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_testConduct">

            <RadioButton
                android:id="@+id/rb_visitHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rb_visitHospital" />

            <RadioButton
                android:id="@+id/rb_mobileTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rb_mobileTest" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_paymentMethod"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/tv_paymentMethod"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <RadioGroup
            android:id="@+id/rg_PyamentMethod"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_paymentMethod">

            <RadioButton
                android:id="@+id/rb_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rb_cash" />

            <RadioButton
                android:id="@+id/rb_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rb_card" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_PyamentMethod"
            tools:ignore="DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck" />

        <Button
            android:id="@+id/btn_showAll"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_showAll"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
