<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:layout_margin="13dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_addressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_addressView"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_emailView"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_phoneView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_phoneView"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>