<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestPrepare">

    <TextView
        android:id="@+id/tv_testDescription"
        android:layout_width="383dp"
        android:layout_height="154dp"
        android:layout_marginTop="40dp"
        android:textSize="12sp"
        android:background="@drawable/tv_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ready"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_ready"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_testDescription" />

    <Button
        android:id="@+id/btn_prepareTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_prepareTest"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="btn_prepareTest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="252dp"
        android:layout_height="109dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ready">

        <RadioButton
            android:id="@+id/rb_testYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_testYes" />

        <RadioButton
            android:id="@+id/rb_testNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_testNo" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>