<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiCalculator"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="232dp"
        android:layout_marginEnd="1dp"
        android:alpha="0.8"
        android:background="@drawable/bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="138dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="256dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_height"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/tv_bmi"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_weight"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bmi" />

    <EditText
        android:id="@+id/height"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custome_input"
        android:drawableLeft="@drawable/ic_height"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Height in CM"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/tv_height"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custome_input"
        android:drawableLeft="@drawable/ic_bweight"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Weight in KG"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_bmi" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_bbg"
        android:onClick="CalculateBMI"
        android:text="CALCULATE BMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/result"
        android:textColor="@color/black"
        android:textColorHint="@color/red"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />
</androidx.constraintlayout.widget.ConstraintLayout>